# compilador

./: .gitignore  Makefile.am  README  configure.ac  write.pas
doc/: .~lock.relatorio.odt#  apontamento.ods  relatorio.odt
examples/: callfunction.mypas  declarations.mypas  declarations.pas  formalparmexample.mypas  hello.mypas  while.pas
include/: parser.h
includes/: builtin_functions.h  gencode.h  keywords.h  lexer.h  parser.h  symtab.h  tokens.h
src/: Makefile.am  builtin_functions.c  builtin_functions.h  compilador  debug.c  debug.h  errors.h  gencode.c  gencode.h  keywords.c  keywords.h  lexer.c  lexer.h  main.c  parser.c  parser.h  symtab.c  symtab.h  tokens.h
tests/: Makefile.am  builtin_functions_test  builtin_functions_test.c  compilador_test  exemplo.pas  lexer_test  lexer_test.c  main_test.c  parser_test  parser_test.c  symtab_test  symtab_test.c
tests/assembly/: eco  eco.as  exit.as  hello  hello.as
